Fixed z-index problem to hero setion

--- a/src/index.css
+++ b/src/index.css
@@ -64,10 +64,11 @@
     min-height: 500px;
     height: 100%;
     /* min-height: 380px; */
+    z-index: -1;
     @apply bg-gray-100 px-4;
   }
   .hero-text {
-    max-width: ;
+    z-index: 1;
     @apply max-w-2xl;
   }
   .suggestion {
